# notebooks-ocds

./: .pre-commit-config.yaml  Kingfisher_notebook_generator.ipynb  README.md  analysis_notebook_template.ipynb  calculate_general_statistics.ipynb  check_data_quality.ipynb  check_for_errors.ipynb  check_scope.ipynb  check_structure_and_format.ipynb  choose_data.ipynb  component_charts.ipynb  component_check_conformance.ipynb  component_check_conformance.md  component_check_quality.ipynb  component_check_quality.md  component_check_red_flags_external.ipynb  component_check_red_flags_external.py  component_check_red_flags_kingfisher.ipynb  component_check_red_flags_kingfisher.py  component_check_relevant.ipynb  component_check_relevant.py  component_check_relevant_all_registry.ipynb  component_check_relevant_all_registry.py  component_check_relevant_external.ipynb  component_check_structure.ipynb  component_check_structure.md  component_check_usability.ipynb  component_check_usability_external.ipynb  component_check_usability_external.py  component_check_usability_kingfisher.ipynb  component_check_usability_kingfisher.py  component_download_data_from_registry.ipynb  component_environment.ipynb  component_environment.py  component_errors_kingfisher.ipynb  component_errors_kingfisher.md  component_get_field_list_all_registry.ipynb  component_get_field_list_all_registry.py  component_scope_kingfisher.ipynb  component_scope_kingfisher.md  (+59 more)
.github/workflows/: check_sql.yml  lint.yml  main.yml  publish.yml
