[project]
name = "notebooks-ocds"
version = "0.0.0"

[tool.black]
line-length = 119

[tool.ruff]
line-length = 119
target-version = "py310"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN", "C901", "COM812", "D203", "D212", "D415", "EM", "ISC001", "PERF203", "PLR091", "Q000",
    "D1",
    "ERA001",  # commented-out code
]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.per-file-ignores]
"component_*" = ["F821"]
"template_*" = ["E501", "F401"]
"*.ipynb" = ["ARG001"]  # $file_name
